# genomic-cohort-delivery-pipeline

./: Dockerfile  Makefile  README.md  pyproject.toml  secure_transfer_protocol.sh
.github/workflows/: ci.yml
legacy/: filter_cohort_samples.sh  generate_delivery_manifest.sh  merge_and_correct_genotypes.sh
src/cohort_delivery/: __init__.py  filter.py  manifest.py  merge.py  pipeline.py  transfer.py
src/genomic_cohort_delivery_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_filter.py  test_manifest.py  test_transfer.py
